# vms

./: .gitignore  Application.hs  Foundation.hs  README.md  Settings.hs  Token.hs  devel.hs  vms.cabal
Handler/: Buy.hs  Home.hs  Signup.hs  Stock.hs
config/: models  postgresql.yml  routes  settings.yml
templates/: buy.cassius  buy.hamlet  default-layout-wrapper.hamlet  default-layout.cassius  homepage.cassius  homepage.hamlet  new-product.hamlet  signup.hamlet  stock.hamlet  update-product.hamlet
