name:              vms
description:       Vorratsmatenspeicherung
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Token
                     Handler.Home
                     Handler.Signup
                     Handler.Buy
                     Handler.Stock

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4
                 , yesod                         >= 1.4
                 , yesod-core                    >= 1.4
                 , yesod-auth                    >= 1.4
                 , yesod-static                  >= 1.4
                 , yesod-form                    >= 1.4
                 , bytestring                    >= 0.10.4
                 , text                          >= 1.2
                 , persistent                    >= 2.1
                 , persistent-postgresql         >= 2.1
                 , persistent-template           >= 2.1
                 , template-haskell
                 , hamlet                        >= 1.2
                 , shakespeare                   >= 2.0
                 , hjsmin                        >= 0.1
                 , monad-control                 >= 0.3
                 , wai-extra                     >= 2.0
                 , yaml                          >= 0.8
                 , http-conduit                  >= 2.1
                 , directory                     >= 1.1
                 , warp                          >= 2.0
                 , data-default
                 , aeson                         >= 0.8
                 , conduit                       >= 1.2
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.1
                 , wai-logger                    >= 2.1
                 , http-types                    >= 0.8.5
                 , mime-mail                     >= 0.4.5 

executable         vms
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , vms
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , vms
                 , yesod-test >= 1.4
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
